--- a/app/views/shared/_calendar.html.haml
+++ b/app/views/shared/_calendar.html.haml
@@ -1,6 +1,6 @@
 - content_for :footer do
   = javascript_include_tag 'calendar'
-#scheduler_here.dhx_cal_container{:style => "width:100%; height:100%;"}
+#scheduler.dhx_cal_container{:style => "width:100%; height:100%;"}
   .dhx_cal_navline
     .dhx_cal_prev_button
     .dhx_cal_next_button
