fixing css bugs

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,7 +3,7 @@
  *= require dhtmlx/dhtmlxscheduler
  *= require dhtmlx/dhtmlxscheduler_dhx_terrace
  *= require jquery-minicolors
- *= #require bootstrap_and_overrides
+ *= require bootstrap_and_overrides
  *= require_self
  */
 
