--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,10 +1,11 @@
 !!!
-%head
-  %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-type"}/
-  %title
-  = csrf_meta_tags
-  = stylesheet_link_tag 'application'
-%body
-  = yield
-= javascript_include_tag 'application'
-= yield :footer
+%html
+  %head
+    %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-type"}/
+    %title
+    = csrf_meta_tags
+    = stylesheet_link_tag 'application'
+  %body
+    = yield
+    = javascript_include_tag 'application'
+    = yield :footer
